# chatty

./: Dockerfile  README.md  container-commands.sh  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml
chatty/: manage.py
chatty/activity/: admin.py  models.py  signals.py
chatty/activity/migrations/: 0001_create_active_model.py  0002_add_field_is_online.py
chatty/config/: asgi.py  consumers.py  custom_jwt_middleware.py  production_settings.py  routing.py  settings.py  urls.py  views.py
chatty/frontend/: Dockerfile  package-lock.json  package.json
chatty/frontend/production/: Dockerfile  nginx.conf
chatty/frontend/public/: index.html
chatty/frontend/src/: App.js  index.css  index.js  nav.js
chatty/frontend/src/components/: googleLoginButton.js  sidebar.js
chatty/frontend/src/pages/: home.js  intro.js  login.js  logout.js
nginx/: Dockerfile  nginx.conf  package-lock.json
